<?xml version="1.0"?>
<package>
  <name>robotnik_movebase_planner</name>
  <version>0.1.0</version>
  <description>The robotnik_movebase_planner package</description>

  <maintainer email="rnavarro@robotnik.es">Román Navarro</maintainer> 
  <author email="rnavarro@robotnik.es">Román Navarro</author> 
  <license>BSD</license>

  <url type="website">http://wiki.ros.org/robotnik_movebase_planner</url>
  <url type="repository">https://github.com/RobotnikAutomation/robotnik_movebase_planner.git</url>  

  <buildtool_depend>catkin</buildtool_depend>
  
  <run_depend>robotnik_mb_planner</run_depend>
  <run_depend>robotnik_mb_msgs</run_depend>

  <export><metapackage/></export>

</package>
